# sst-lambda-docker-boilerplate

./: .env  .env.example  .gitignore  README.md  pyproject.toml  sst.config.ts  test_websocket_client.py
functions/: Dockerfile  pyproject.toml  requirements.txt  sst.pyi
functions/src/functions/: api.py  chatAgent.py  invokeModel.py  onConnect.py  onDisconnect.py  sst.py  supported_model_list.py
