[project]
name = "sst-lambda-websocket"
version = "0.1.0"
description = "A SST app for a Lambda WebSocket"
authors = []
dependencies = [
    "dotenv>=0.9.9",
    "websockets>=15.0.1",
]

# It is recommended to specify your python version to match your Lambda runtime otherwise you may
# encounter issues with dependencies.
requires-python = "==3.11.*"

[tool.uv.workspace]
members = ["functions", "core", "custom_dockerfile"]

[tool.uv.sources]
sst = { git = "https://github.com/sst/sst.git", subdirectory = "sdk/python", branch = "dev" }
